Consolidate timers to single procedure.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,7 @@
 <resources>
 
     <string name="app_name">Rice_timer</string>
-    <string name="hello_world">Hellur Gogi bear!!!</string>
-    <string name="timer_button">Long-grain rice timers</string>
-    <string name="jasmine_button">Jasmine rice timers</string>
-    <string name="basmati_button">Basmati rice timers</string>
+    <string name="timer_button">Rice timer</string>
     <string name="action_settings">Settings</string>
 
 </resources>
