--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Rice_timer</string>
-    <string name="timer_button">Rice timer</string>
+    <string name="app_name">RICE TIMER</string>
+    <string name="timer_button">rice timer</string>
     <string name="action_settings">Settings</string>
 
 </resources>
