Added Shortbread annotations.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">RICE TIMER</string>
     <string name="timer_button">rice timer</string>
+    <string name="metronome_button">metronone timer</string>
     <string name="action_settings">Settings</string>
 
 </resources>
