--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">RICE TIMER</string>
     <string name="timer_button">Set Rice Timer</string>
-    <string name="metronome_button">metronone timer</string>
+    <string name="metronome_button">Set Metronome Timer</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_hello_world">HelloWorldActivity</string>
     <string name="rest_key">rest</string>
