--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">RICE TIMER</string>
+    <string name="app_name">Rice Timer</string>
     <string name="timer_button">Set Rice Timer</string>
     <string name="metronome_button">Set Metronome Timer</string>
     <string name="action_settings">Settings</string>
